# silib

./: Cargo.toml  rustfmt.toml
examples/: new_units_and_quantities.rs
src/: constants.rs  dimension.rs  kind.rs  lib.rs  macros.rs  quantity.rs  si.rs  unit.rs  util.rs  value_type.rs
tests/: compile_test.rs  complex_numbers.rs
tests/compile-fail/: misc_unit_assignments.rs  misc_unit_assignments.stderr
